--- a/index.html
+++ b/index.html
@@ -1,54 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-
-    <title>Login</title>
-    <link rel="stylesheet" href="project.css" />
-
+    <meta charset="UTF-8">
+    <title>ST3-Mini Project</title>
+    <link rel="stylesheet" href="css/index.css">
+    <script src="js/index.js" type="text/javascript"></script>
 </head>
-
 <body>
 
-<form>
+<div id="parent">
+    <p id="heading">Details form</p>
+
+<div id="view">
+    <hr>
     <table>
         <tr>
-            <td><u> </u></td>
-            <td>&nbsp;&nbsp;Details Form <hr size="1" width="110%"color="black">  </td>
-            <td><u> </u></td>
+        <td><label for="Name">Name:</label></td>
+        <td><input type="text" id="Name" name="name" minlength="3"></td>
         </tr>
         <tr>
-            <td><label> Name :</label></td>
-            <td></td>
-            <td><input type="text" id="name" minlength="3" size="40" required /></td>
+            <td> <label for="mob_no">Mob.no:</label></td>
+            <td><input type="text" id="mob_no" name="mob_no" minlength="10"></td>
         </tr>
         <tr>
-            <td><label>Mob.No :</label></td>
-            <td></td>
-            <td><input type="tel" id="mob" maxlength="10" size="40" required /></td>
-        </tr>
+            <td><label for="email">Email Id:</label></td>
+            <td><input type="email" id="email" name="email"></td>
 
-        <tr>
-            <td><label>Email ID :</label></td>
-            <td></td>
-            <td>
-                <input pattern="/^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" title="Please type valid email address" size="40" required />
-            </td>
         </tr>
         <tr>
-            <td><br /></td>
-            <td><br /></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td>
-                <button id="submit"><b>SUBMIT</b></button>
-            </td>
+            <td colspan="2" align="center"> <input type="submit" value="Submit" id="submit" onclick="ADDuser()"></td>
         </tr>
     </table>
-    <hr />
-    <div><span id="out"></span></div>
-</form>
-
+</div>
+<hr>
+<div id="result_div">
+    <table id="result_table">
+        <tr>
+            <td>Name:</td>
+            <td>Mob No:</td>
+            <td>Email:</td>
+        </tr>
+    </table>
+</div>
+</div>
 </body>
 </html>
