--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ST3-Mini Project</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/project.css">
     <script src="js/index.js" type="text/javascript"></script>
 </head>
 <body>
